--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,9 @@
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
   {%- include head.html -%}
-
+<head>
+    <script src="https://secure.actblue.com/cf/assets/actblue.js" async></script>
+  </head>
   <body>
 
 
