--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,6 +17,13 @@
   <!-- Fall-back content (in case the embeddable doesn't load) -->
   <a href="https://secure.actblue.com/donate/sunriseweb">Donate</a>
 </div>
+<!-- This div should be included in the page where you want the button to appear. -->
+<div data-ab-button
+ data-ab-token="zDZFQMP68XDJTAQhukMP7ntB"
+>
+  <!-- Fall-back content (in case the embeddable doesn't load) -->
+  <a href="https://secure.actblue.com/donate/sunriseweb">Donate</a>
+</div>
 
   
 
