updated default html

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="{{ page.lang | default: site.lang | default: "en" }}">
 
+  {%- include head.html -%}
 <head>
-    <meta charset="utf-8">
-    <title>{{ page.title }}</title>
     <script>window.actBlueConfig = {styleSheetHref: "https://raw.githubusercontent.com/bluetomatoes/actblue-testing/gh-pages/ab-styles.css"};</script>
     <script src="https://secure.actblue.com/cf/assets/actblue.js" async></script>
 
