--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,7 +3,7 @@
 
   {%- include head.html -%}
 <head>
-    <script>window.actBlueConfig = {styleSheetHref: "https://raw.githubusercontent.com/bluetomatoes/actblue-testing/gh-pages/ab-styles.css"};</script>
+    <script>window.actBlueConfig = {styleSheetHref: "https://bluetomatoes.github.io/actblue-testing/assets/ab-styles.css"};</script>
     <script src="https://secure.actblue.com/cf/assets/actblue.js" async></script>
 
   </head>
