updated embed background color, border styling

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,6 +30,10 @@
   
 
       </div>
+    <iframe src="https://events.mobilizeamerica.io/embed/__--/signup"
+  width="320px"
+  style="border:none;">
+</iframe>
     </main>
 
     {%- include footer.html -%}
