corrected typo and added mobilize link

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -30,7 +30,7 @@
   
 
       </div>
-    <iframe src="https://events.mobilizeamerica.io/embed/__--/signup"
+    <iframe src="https://events.mobilizeamerica.io/embed/event/354486/signup"
   width="320px"
   style="border:none;">
 </iframe>
